--- a/GUI/FluidGUI/FluidGUI.vcxproj
+++ b/GUI/FluidGUI/FluidGUI.vcxproj
@@ -70,7 +70,7 @@
     <QtModules>core;gui;widgets</QtModules>
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <QtInstall>6.2.1_msvc2019_64</QtInstall>
+    <QtInstall>6.2.0_msvc2019_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
@@ -193,6 +193,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
     <ClCompile Include="mygraphicsview.cpp" />
+    <ClCompile Include="Old_mygraphicsview.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mainwindow.h">
@@ -205,8 +206,8 @@
     </QtUic>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simulation\Simulation.vcxproj">
-      <Project>{8ea49662-6ed5-43e5-9502-8f68198b7094}</Project>
+    <ProjectReference Include="..\Simulation2\Simulation2.vcxproj">
+      <Project>{1a3d43a0-2313-4afe-b979-559772477bd1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
