--- a/GUI/Factory/Factory.vcxproj
+++ b/GUI/Factory/Factory.vcxproj
@@ -23,11 +23,13 @@
     <ClInclude Include="Factory.h" />
     <ClInclude Include="FactoryNotEditedSimulation.h" />
     <ClInclude Include="NotEditedSimulation.h" />
+    <ClInclude Include="pch.h" />
     <ClInclude Include="Simulation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FactoryNotEditedSimulation.cpp" />
     <ClCompile Include="NotEditedSimulation.cpp" />
+    <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -133,8 +135,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader>Create</PrecompiledHeader>
+      <PrecompiledHeaderFile>
+      </PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>
