--- a/GUI/Factory/Factory.vcxproj
+++ b/GUI/Factory/Factory.vcxproj
@@ -20,15 +20,26 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CudaSimulation.h" />
+    <ClInclude Include="EditedSimulation.h" />
     <ClInclude Include="Factory.h" />
+    <ClInclude Include="FactoryCudaSimulation.h" />
+    <ClInclude Include="FactoryEditedSimulation.h" />
     <ClInclude Include="FactoryNotEditedSimulation.h" />
+    <ClInclude Include="FactoryOpenMPSimulation.h" />
     <ClInclude Include="NotEditedSimulation.h" />
+    <ClInclude Include="OpenMPSimulation.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Simulation.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CudaSimulation.cpp" />
+    <ClCompile Include="EditedSimulation.cpp" />
+    <ClCompile Include="FactoryCudaSimulation.cpp" />
+    <ClCompile Include="FactoryEditedSimulation.cpp" />
     <ClCompile Include="FactoryNotEditedSimulation.cpp" />
+    <ClCompile Include="FactoryOpenMPSimulation.cpp" />
     <ClCompile Include="NotEditedSimulation.cpp" />
+    <ClCompile Include="OpenMPSimulation.cpp" />
     <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
