--- a/GUI/Factory/Factory.vcxproj
+++ b/GUI/Factory/Factory.vcxproj
@@ -34,7 +34,6 @@
     <ClInclude Include="SimulationMA.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CudaSimulation.cpp" />
     <ClCompile Include="EditedSimulation.cpp" />
     <ClCompile Include="FactoryCudaSimulation.cpp" />
     <ClCompile Include="FactoryEditedSimulation.cpp" />
@@ -45,6 +44,9 @@
     <ClCompile Include="OpenMPSimulation.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="SimulationMA.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="CudaSimulation.cu" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -82,6 +84,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.6.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -181,5 +184,6 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.6.targets" />
   </ImportGroup>
 </Project>
