Dodanie wersji cuda bez stałych i bez testów

--- a/GUI/Factory/Factory.vcxproj
+++ b/GUI/Factory/Factory.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CudaSimulation.h" />
+    <ClInclude Include="HostCudaSimulation.h" />
+    <ClInclude Include="DeviceCudaSimulation.cuh" />
     <ClInclude Include="EditedSimulation.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="FactoryCudaSimulation.h" />
@@ -40,13 +41,16 @@
     <ClCompile Include="FactoryMA.cpp" />
     <ClCompile Include="FactoryNotEditedSimulation.cpp" />
     <ClCompile Include="FactoryOpenMPSimulation.cpp" />
+    <ClCompile Include="HostCudaSimulation.cpp" />
     <ClCompile Include="NotEditedSimulation.cpp" />
     <ClCompile Include="OpenMPSimulation.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="SimulationMA.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="CudaSimulation.cu" />
+    <CudaCompile Include="DeviceCudaSimulation.cu">
+      <TargetMachinePlatform Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">64</TargetMachinePlatform>
+    </CudaCompile>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
