--- a/GUI/Factory/Factory.vcxproj
+++ b/GUI/Factory/Factory.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -33,9 +33,9 @@
     <ClInclude Include="FactoryEditedSimulation.h" />
     <ClInclude Include="FactoryMA.h" />
     <ClInclude Include="FactoryNotEditedSimulation.h" />
-    <ClInclude Include="FactoryOpenMPSimulation.h" />
+    <ClInclude Include="FactoryOpenCLSimulation.h" />
     <ClInclude Include="NotEditedSimulation.h" />
-    <ClInclude Include="OpenMPSimulation.h" />
+    <ClInclude Include="OpenCLSimulation.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Simulation.h" />
     <ClInclude Include="SimulationMA.h" />
@@ -46,14 +46,14 @@
     <ClCompile Include="FactoryEditedSimulation.cpp" />
     <ClCompile Include="FactoryMA.cpp" />
     <ClCompile Include="FactoryNotEditedSimulation.cpp" />
-    <ClCompile Include="FactoryOpenMPSimulation.cpp" />
+    <ClCompile Include="FactoryOpenCLSimulation.cpp" />
     <CudaCompile Include="HostCudaSimulation.cu">
       <FileType>Document</FileType>
       <TargetMachinePlatform Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">64</TargetMachinePlatform>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </CudaCompile>
     <ClCompile Include="NotEditedSimulation.cpp" />
-    <ClCompile Include="OpenMPSimulation.cpp" />
+    <ClCompile Include="OpenCLSimulation.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="SimulationMA.cpp" />
   </ItemGroup>
@@ -181,7 +181,7 @@
       <AdditionalLibraryDirectories>$(CUDA_PATH);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </CudaLink>
     <CudaLink>
-      <AdditionalDependencies>$(CUDA_PATH)\lib\cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(CUDA_PATH)\lib\cudart.lib;$(CUDA_PATH)\lib\x64\OpenCL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
